# python -m build
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "memo-lang"
dynamic = ["version"]
authors = [
  {name = "Kartik Chandra"},
  {name = "Tony Chen"}
]
license = {file = "LICENSE"}
description = "A language for mental models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "jax" ]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "http://github.com/kach/memo"
Repository = "http://github.com/kach/memo.git"
Issues = "http://github.com/kach/memo/issues"

[tool.setuptools]
packages = ["memo"]

[tool.setuptools.dynamic]
version = {attr = "memo.__version__"}

[tool.mypy]
strict = true
exclude = [
  "demo/.*",
  "utils\\.py",
  "comic\\.py",
  "lib\\.py"
]

[[tool.mypy.overrides]]
module = [ "memo.*" ]
follow_imports = "skip"  # or "error"
